# classeine

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CNAME  Doxyfile  LICENSE  Makefile  README.md  TODO.md  annotated.html  annotated_dup.js  classes.html  dir_000000_000005.html  dir_000000_000006.html  dir_000000_000011.html  dir_000001_000002.html  dir_000001_000006.html  dir_000005_000004.html  dir_000006_000004.html  dir_000006_000005.html  dir_000007_000004.html  dir_000007_000005.html  dir_000007_000006.html  dir_000007_000011.html  dir_000008_000004.html  dir_000008_000005.html  dir_000008_000006.html  dir_000008_000007.html  dir_000008_000012.html  dir_000009_000004.html  dir_000009_000005.html  dir_000009_000006.html  dir_000010_000005.html  dir_000010_000006.html  dir_000010_000008.html  dir_000010_000009.html  dir_000011_000004.html  dir_000011_000005.html  dir_000011_000006.html  (+216 more)
code/: LOC  (+2 more)
code/classeine-demo/: CMakeLists.txt  Main.cpp  Makefile  demo_box_layout_container.h  demo_control_container.cpp  demo_control_container.h  demo_dual_layout_container.cpp  demo_dual_layout_container.h  demo_flow_layout_container.cpp  demo_flow_layout_container.h  demo_hbox_layout_container.cpp  demo_hbox_layout_container.h  demo_option_container.cpp  demo_option_container.h  demo_tab_control.cpp  demo_tab_control.h  demo_window.cpp  demo_window.h  demo_xy_layout_container.cpp  demo_xy_layout_container.h
code/classeine-lib/: CMakeLists.txt
code/classeine-lib/classeine/core/: StringUtils.h
code/classeine-lib/clsn/core/: Configuration.h  Console.h  Empty.h  EmptyEvent.h  Entity.cpp  Entity.h  EntityWrapper.h  Event.cpp  Event.h  EventListener.h  EventListenerHandle.h  EventListenerList.h  Factory.h  IEntity.h  Lazy.h  NonInstantiable.h  OptionalReference.h  Panic.cpp  Panic.h  Property.h  StringUtils.h  Strings.cpp  Strings.h  System.h  ValueChangedEvent.h  configuration.h  console.h  empty.h  empty_event.h  entity.cpp  entity.h  entity_wrapper.h  event.cpp  event.h  event_listener.h  event_listener_list.h  factory.h  lazy.h  multi_args_event.h  non_instantiable.h  (+6 more)
code/classeine-lib/clsn/core/events/: EventListenerHandle.h  EventListenerList.h  ValueChangedEventListener.h
code/classeine-lib/clsn/draw/: Color.cpp  Color.h  Colors.cpp  Colors.h  Dimension.cpp  Dimension.h  Font.cpp  Font.h  FontInfo.cpp  FontInfo.h  FontStyle.h  Forward.h  Point.cpp  Point.h  Region.cpp  Region.h  TextHorizontalAlignment.h  TextVerticalAlignment.h  color.cpp  color.h  colors.cpp  colors.h  dimension.cpp  dimension.h  font.cpp  font.h  font_info.cpp  font_info.h  font_style.h  forward.h  point.cpp  point.h  region.cpp  region.h  text_horizontal_alignment.h  text_vertical_alignment.h
code/classeine-lib/clsn/gfx/: Dimension.cpp  Dimension.h
code/classeine-lib/clsn/ui/: BorderLayoutContainer.h  Button.cpp  Button.h  CaptionableControl.cpp  CaptionableControl.h  CheckBox.cpp  CheckBox.h  ClickableControl.cpp  ClickableControl.h  ConstrainedContainer.h  Container.h  ContentPane.cpp  ContentPane.h  Control.cpp  Control.h  ControlBase.cpp  ControlBase.h  DualContainer.cpp  DualContainer.h  DualLayoutContainer.cpp  DualLayoutContainer.h  DynamicContentPane.cpp  DynamicContentPane.h  EmptyControl.cpp  EmptyControl.h  FlowContainer.cpp  FlowContainer.h  FlowLayoutContainer.cpp  FlowLayoutContainer.h  Forward.h  Graphics.h  HBoxContainer.cpp  HBoxContainer.h  HBoxLayoutContainer.cpp  HBoxLayoutContainer.h  IRenderer.h  Label.cpp  Label.h  LayoutContainer.h  ListContainer.h  (+107 more)
code/classeine-lib/clsn/ui/_private/: tab_control_view.cpp  tab_control_view.h  tab_control_view_header.cpp  tab_control_view_header.h  tab_control_view_header_button.cpp  tab_control_view_header_button.h  tab_control_view_header_button_renderer.cpp  tab_control_view_header_button_renderer.h
code/classeine-lib/clsn/ui/amatista/: AmatistaUISkin.cpp  AmatistaUISkin.h  AmatistaUITheme.cpp  AmatistaUITheme.h  DarkAmatistaUITheme.cpp  DarkAmatistaUITheme.h  LightAmatistaUITheme.cpp  LightAmatistaUITheme.h  amatista_ui_skin.cpp  amatista_ui_skin.h  amatista_ui_theme.cpp  amatista_ui_theme.h  dark_amatista_ui_theme.cpp  dark_amatista_ui_theme.h  light_amatista_ui_theme.cpp  light_amatista_ui_theme.h
code/classeine-lib/clsn/ui/controllers/: ButtonController.h  HBoxContainerController.h  MainWindowController.h  VBoxContainerController.h
code/classeine-lib/clsn/ui/defaults/: ButtonDefaults.cpp  ButtonDefaults.h  CheckBoxDefaults.cpp  CheckBoxDefaults.h  DefaultDarkUITheme.cpp  DefaultDarkUITheme.h  DefaultLightUITheme.cpp  DefaultLightUITheme.h  DefaultUISkin.cpp  DefaultUISkin.h  DefaultUITheme.cpp  DefaultUITheme.h  HBoxContainerDefaults.cpp  HBoxContainerDefaults.h  LabelDefaults.cpp  LabelDefaults.h  MainWindowDefaults.cpp  MainWindowDefaults.h  RadioButtonDefaults.cpp  RadioButtonDefaults.h  ThemeDefaults.cpp  ThemeDefaults.h  ToggleButtonDefaults.cpp  ToggleButtonDefaults.h  VBoxContainerDefaults.cpp  VBoxContainerDefaults.h  XYContainerDefaults.cpp  XYContainerDefaults.h
code/classeine-lib/clsn/ui/events/: ActionEvent.cpp  ActionEvent.h  ActionEventManager.h  ControlEvent.cpp  ControlEvent.h  ControlResizedEvent.cpp  ControlResizedEvent.h  MouseClickEvent.cpp  MouseClickEvent.h  MouseMovedEvent.cpp  MouseMovedEvent.h  WindowEventManager.h  action_event.cpp  action_event.h  control_event.cpp  control_event.h  control_resized_event.cpp  control_resized_event.h  mouse_click_event.cpp  mouse_click_event.h  mouse_moved_event.cpp  mouse_moved_event.h
code/classeine-lib/clsn/ui/impl/: GraphicsImpl.h  MainWindowImpl.h  graphics_impl.h  main_window_impl.h
code/classeine-lib/clsn/ui/layouts/: DualLayout.cpp  DualLayout.h  FlowLayout.cpp  FlowLayout.h  HBoxLayout.cpp  HBoxLayout.h  Layout.h  LayoutUtils.h  VBoxLayout.cpp  VBoxLayout.h  XYLayout.cpp  XYLayout.h  XYLayoutConstraint.cpp  XYLayoutConstraint.h  dual_layout.cpp  dual_layout.h  flow_layout.cpp  flow_layout.h  hbox_layout.cpp  hbox_layout.h  layout.h  layout_base.h  layout_utils.h  vbox_layout.cpp  vbox_layout.h  xy_layout.cpp  xy_layout.h  xy_layout_constraint.cpp  (+1 more)
(+3234 files in other folders)
